--- a/components/navigation/MainNavigation.module.css
+++ b/components/navigation/MainNavigation.module.css
@@ -1,17 +1,19 @@
 .header {
   width: 100%;
   height: 5rem;
+  background-color: #38015c;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  background-color: #77002e;
+  align-items: center;
   padding: 0 10%;
 }
 
 .logo {
+  font-family: "Lato", sans-serif;
   font-size: 2rem;
   color: white;
-  font-weight: bold;
+  margin: 0;
 }
 
 .header ul {
@@ -23,17 +25,31 @@
 }
 
 .header li {
-  margin-left: 3rem;
+  margin: 0 1rem;
 }
 
 .header a {
   text-decoration: none;
-  font-size: 1.5rem;
-  color: #fcb8d2;
+  color: white;
+  font-weight: bold;
 }
 
-.header a:hover,
-.header a:active,
-.header a.active {
+.header button {
+  font: inherit;
+  background-color: transparent;
+  border: 1px solid white;
   color: white;
+  font-weight: bold;
+  padding: 0.5rem 1.5rem;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.header a:hover {
+  color: #c291e2;
+}
+
+.header button:hover {
+  background-color: #c291e2;
+  color: #38015c;
 }
