--- a/components/foods/FoodItem.module.css
+++ b/components/foods/FoodItem.module.css
@@ -1,18 +1,19 @@
 .item {
-  margin: 1rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1.5rem 0;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
-.image {
-  width: 100%;
-  height: 20rem;
-  overflow: hidden;
-  border-top-right-radius: 6px;
-  border-top-left-radius: 6px;
+.item:hover {
+  background-color: rgb(248, 243, 224);
 }
 
-.image img {
-  width: 100%;
-  object-fit: cover;
+.item img {
+  max-width: 100px;
 }
 
 .content {
@@ -26,15 +27,15 @@
 }
 
 .actions {
-  padding: 1.5rem;
+  padding: 1rem;
   text-align: center;
 }
 
 .actions button {
   font: inherit;
   cursor: pointer;
-  color: #77002e;
-  border: 1px solid #77002e;
+  color: #000000;
+  border: 1px solid #000000;
   background-color: transparent;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
@@ -42,5 +43,6 @@
 
 .actions button:hover,
 .actions button:active {
-  background-color: #ffe2ed;
+  background-color: #38015c;
+  color: white;
 }
