--- a/components/foods/NewFoodForm.module.css
+++ b/components/foods/NewFoodForm.module.css
@@ -1,5 +1,12 @@
 .form {
-  padding: 1rem;
+  padding: 0rem 1rem;
+}
+
+.form h2 {
+  text-align: center;
+  padding: 2rem;
+  background-color: #0e8994;
+  color: white;
 }
 
 .control {
@@ -30,16 +37,16 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  background-color: #77002e;
+  background-color: #0e8994;
   color: white;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #77002e;
+  border: 1px solid #0e8994;
   border-radius: 4px;
   font-weight: bold;
 }
 
 .actions button:hover,
 .actions button:active {
-  background-color: #a50e48;
-  border-color: #a50e48;
+  background-color: #0da8b6;
+  border-color: #0da8b6;
 }
