--- a/components/auth/AuthForm.module.css
+++ b/components/auth/AuthForm.module.css
@@ -3,36 +3,19 @@
   width: 95%;
   max-width: 25rem;
   border-radius: 6px;
-  background-color: #38015c;
+  background-color: #ffffff;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  padding: 1rem;
+  padding: 1rem 3rem;
   text-align: center;
 }
 
 .auth h1 {
   text-align: center;
-  color: white;
+  color: #2f2f2f;
 }
 
 .control {
-  margin-bottom: 0.5rem;
-}
-
-.control label {
-  display: block;
-  color: white;
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-}
-
-.control input {
-  font: inherit;
-  color: #38015c;
-  border-radius: 4px;
-  border: 1px solid white;
-  width: 100%;
-  text-align: left;
-  padding: 0.25rem;
+  margin-bottom: 1rem;
 }
 
 .actions {
