--- a/components/foods/FoodItem.module.css
+++ b/components/foods/FoodItem.module.css
@@ -1,5 +1,5 @@
 .item {
-  display: flex;
+  /* display: flex; */
   justify-content: space-between;
   align-items: center;
   margin: 1.5rem 0;
@@ -9,40 +9,24 @@
 }
 
 .item:hover {
-  background-color: rgb(248, 243, 224);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
 }
-
 .item img {
   max-width: 100px;
 }
 
 .content {
   text-align: center;
-  padding: 1rem;
+  padding: 0.5rem;
+  background-color: #575757;
 }
 
-.content h3 {
-  font-size: 1.25rem;
-  color: #2c292b;
+.content h2 {
+  color: aliceblue;
+  margin: 0.5rem;
 }
 
 .actions {
   padding: 1rem;
   text-align: center;
-}
-
-.actions button {
-  font: inherit;
-  cursor: pointer;
-  color: #000000;
-  border: 1px solid #000000;
-  background-color: transparent;
-  padding: 0.5rem 1.5rem;
-  border-radius: 4px;
-}
-
-.actions button:hover,
-.actions button:active {
-  background-color: #38015c;
-  color: white;
 }
