--- a/components/foods/NewFoodForm.module.css
+++ b/components/foods/NewFoodForm.module.css
@@ -4,45 +4,29 @@
 
 .form h2 {
   text-align: center;
-  padding: 2rem;
-  background-color: #0e8994;
+  padding: 1rem;
+  background-color: #757575;
   color: white;
 }
 
 .control {
   margin-bottom: 0.5rem;
+  margin: 1rem 2rem;
 }
 
-.control label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-}
-
-.control input,
-.control textarea {
-  display: block;
-  font: inherit;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  padding: 0.25rem;
-  width: 100%;
+.control input {
+  padding: 1rem;
 }
 
 .actions {
-  margin-top: 1rem;
-  text-align: right;
+  margin: 2rem;
+  text-align: center;
 }
 
 .actions button {
-  font: inherit;
-  cursor: pointer;
   background-color: #0e8994;
-  color: white;
-  padding: 0.5rem 1.5rem;
-  border: 1px solid #0e8994;
-  border-radius: 4px;
-  font-weight: bold;
+  width: 100%;
+  height: 3rem;
 }
 
 .actions button:hover,
