--- a/components/navigation/MainNavigation.module.css
+++ b/components/navigation/MainNavigation.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 5rem;
-  background-color: #38015c;
+  background-color: #2f2f2f;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: space-between;
@@ -46,10 +46,10 @@
 }
 
 .header a:hover {
-  color: #c291e2;
+  color: #ffffff;
 }
 
 .header button:hover {
-  background-color: #c291e2;
-  color: #38015c;
+  background-color: #ffffff;
+  color: #000000;
 }
